--- a/views/users/signin.ejs
+++ b/views/users/signin.ejs
@@ -1,7 +1,7 @@
 <% layout("/layouts/boilerplate.ejs")  -%>
 
 <div class="row mt-5">
-  <div  class="col-md-4 offset-md-4 border border-dark rounded-4">
+  <div  class="col-md-5 offset-md-3 col-10 offset-1 mb-4 rounded  border  ">
     <h3 class="text-center mt-4">Signin</h3>
     <form action="/login" method="POST" class="needs-validation" novalidate>
       <div class="mb-3 mt-3">
