--- a/views/users/signup.ejs
+++ b/views/users/signup.ejs
@@ -1,7 +1,7 @@
 <% layout('/layouts/boilerplate.ejs') -%>
 
 <div class="row mt-5  " >
-  <div class="col-md-4 offset-md-4 mt-3 border border-dark rounded-4">
+  <div class="col-md-4 offset-md-4 col-10 offset-1 mb-4 rounded  border">
     <form action="/signup" method="POST" class="needs-validation" novalidate>
         <h3 class="text-center mt-4">Signup</h3>
       <div class="mb-3 mt-3">
