--- a/views/listings/show.ejs
+++ b/views/listings/show.ejs
@@ -17,8 +17,8 @@
     <li><%= listing.country %></li>
   </ul>
   <br />
-  <div class="col-1">
-    <a class="btn btn-danger edit" href="/listings/<%= listing._id %>/edit">Edit</a>
+  <div class="col-3">
+    <a class="btn btn-danger " href="/listings/<%= listing._id %>/edit">Edit</a>
   </div>
   <br />
   <div class="col-1">
