--- a/public/css/style.css
+++ b/public/css/style.css
@@ -118,6 +118,6 @@ body{
   width: 800px;
 }
 
-@media screen and (max-width: 320px) {
-  #map { width: 300px; height: 300px;}
+@media screen and (max-width: 375px) {
+  #map { width: 300px; height: 300px; margin-left: 2rem;}
 }
