--- a/views/includes/navbar.ejs
+++ b/views/includes/navbar.ejs
@@ -1,5 +1,5 @@
 
-<nav class="navbar navbar-expand-md bg-body-tertiary sticky-top border-bottom" style="height: 90px;">
+<nav class="navbar navbar-expand-md bg-body-tertiary sticky-top border-bottom" >
   <div class="container-fluid">
     <a class="navbar-brand" href="/listings"><i class="fa-brands fa-airbnb  text-danger fw-bold"></i></a>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup">
